# python-poetry-pyright

./: .gitignore  pyproject.toml
src/: main.py  utils.py
tests/: version.py
