[tool.poetry]
name = "python-poetry-pyright"
version = "0.1.0"
description = "Python Poetry with Pyright"
authors = ["ahnsv <ahnsv@bc.edu>"]
readme = "README.md"
packages = [{include = "python_poetry_pyright"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[tool.pyright]
include = ["src", "tests"]
venvPath = ".venv"
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportPrivateUsage = "none"
reportUnusedVariable = "none"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
